--- a/config/database.yml
+++ b/config/database.yml
@@ -14,9 +14,7 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: todo_list_production
-    username: todo_list
-    password: <%= ENV["TODO_LIST_DATABASE_PASSWORD"] %>
+    url: <%= ENV['DATABASE_URL'] %>
   cache:
     <<: *primary_production
     database: todo_list_production_cache
